cmake_minimum_required(VERSION 3.10)

# Set the project name and version
project(MyProject VERSION 1.0)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Include directories
include_directories(include)

# Add the executable
add_executable(MyProject 
    src/main.cpp
)

# Include directories
target_include_directories(MyProject PUBLIC "${PROJECT_BINARY_DIR}")
